@@ -6,13 +6,12 @@ import com.google.gson.reflect.TypeToken;
 import lombok.AccessLevel;
 import lombok.experimental.FieldDefaults;
 import lombok.experimental.NonFinal;
+import lombok.val;
 import me.afek.foxrp.FoxRPPlugin;
 import me.afek.foxrp.model.Character;
-import me.afek.foxrp.repositories.impl.CharacterRepository;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.HashMap;
@@ -23,24 +22,23 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class PlayerDataService {
 
-    CharacterRepository characterRepository;
+    FoxRPPlugin plugin;
     Gson gson = new GsonBuilder().disableHtmlEscaping().create();
 
     @NonFinal
     File cdFile;
 
     // TODO: Переписать этот калл, сделать через ormlite
-    public PlayerDataService(FoxRPPlugin plugin, CharacterRepository characterRepository) {
-        this.characterRepository = characterRepository;
+    public PlayerDataService(FoxRPPlugin plugin) {
+        this.plugin = plugin;
+
         this.createJsonFile(plugin);
 
-        if (cdFile.length() == 0)
-            return;
+        if (cdFile.length() == 0) return;
 
         Map<String, List<String>> tempMap;
         try {
-            tempMap = gson.fromJson(new String(Files.readAllBytes(cdFile.toPath())), new TypeToken<Map<String, List<String>>>() {
-            }.getType());
+            tempMap = gson.fromJson(new String(Files.readAllBytes(cdFile.toPath())), new TypeToken<Map<String, List<String>>>() {}.getType());
         } catch (IOException e) {
             e.printStackTrace();
             return;
@@ -48,30 +46,31 @@ public class PlayerDataService {
 
         tempMap.forEach((name, value) -> {
             List<Character> heroData = value.stream().map(hero -> {
-                String[] split = hero.split(":");
+                val split = hero.split(":");
                 return new Character(split[0], split[1], split[2]);
             }).collect(Collectors.toList());
 
-            this.characterRepository.addPlayerCharacters(name.toLowerCase(), heroData);
+            plugin.getCharacterRepository().addPlayerCharacters(name.toLowerCase(), heroData);
         });
     }
 
     public void savePlayerData() {
-        Map<String, List<String>> tempMap = new HashMap<>();
-        for (Map.Entry<String, List<Character>> stringListEntry : this.characterRepository.getCharacterPlayerData().entrySet())
+        val tempMap = new HashMap<String, List<String>>();
+        for (val stringListEntry : plugin.getCharacterRepository().getCharacterPlayerData().entrySet())
             tempMap.put(stringListEntry.getKey(), stringListEntry.getValue().stream().map(hero -> hero.getName() + ":" + hero.getValue() + ":" + hero.getSignature()).collect(Collectors.toList()));
 
         try {
-            Files.write(cdFile.toPath(), gson.toJson(tempMap).getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+            Files.writeString(cdFile.toPath(), gson.toJson(tempMap), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    private void createJsonFile(FoxRPPlugin plugin) {
-        File customConfigFile = new File(plugin.getDataFolder(), "data.json");
+    private void createJsonFile(final FoxRPPlugin plugin) {
+        val customConfigFile = new File(plugin.getDataFolder(), "data.json");
         if (!customConfigFile.exists()) {
-            customConfigFile.getParentFile().mkdirs();
+            customConfigFile.mkdirs();
+
             try {
                 customConfigFile.createNewFile();
             } catch (IOException e) {
